# Parallel_prog_lab_3

./: CMakeLists.txt
Parallel_prog_lab_3/: CMakeLists.txt  Parallel_prog_lab_3.cpp  Parallel_prog_lab_3.h
